<resources>
    <string name="app_name">ShoeStore</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="shoe_store">Udacity Shoe Store</string>
    <string name="continue_btn">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout">Logout</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company_name">Company Name</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="welcome_header">Welcome to Udacity Shoe Store!</string>
    <string name="welcome_big_text">I don\'t know what to write here.\n\nLet\'s just pretend that
        something interesting and fancy is written here.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.</string>
    <string name="size_format">Size: %f</string>
    <string name="instructions_big_text">Again, I don\'t know what to write here.\n\nThere should be some kind of instruction.\n\nSo, again…
        Let\'s just pretend that something interesting and useful is written here\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.</string>
</resources>
