<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".fragments.InstructionsFragment"
        android:orientation="vertical">

        <TextView
            style="@style/headerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <TextView
            android:id="@+id/instructions_big_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:text="@string/instructions_big_text" />

        <Button
            android:id="@+id/instructions_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_btn" />
    </LinearLayout>
</layout>