<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_header_bottom_margin"
            android:text="@string/shoe_store"
            app:layout_constraintBottom_toTopOf="@+id/email_text_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/headerStyle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:layout_marginBottom="@dimen/login_edit_spacing"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/password_text_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_twotone_person_outline_24"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_edit_spacing"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:hint="@string/password"
            android:importantForAutofill="no"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_wrapper"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_twotone_vpn_key_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:enabled="@{loginViewModel.canContinue}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_wrapper"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:enabled="@{loginViewModel.canContinue}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/password_text_wrapper"
            app:layout_constraintVertical_bias="0.100000024"
            tools:enabled="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>